{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 11,
  "lineage": "ba8610c8-a396-7ba6-bb86-78a5fe1d7852",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:vpc/vpc-0c191489f702038c7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c4b19e6d2d3dc71c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0d5b6b21a0df85bf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c191489f702038c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07bf9daf3061e0710",
            "owner_id": "686699774218",
            "region": "us-east-1",
            "tags": {
              "Name": "default"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051bfa33df3949860",
            "arn": "arn:aws:ec2:us-east-1:686699774218:instance/i-0decf20f135b2d7a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0decf20f135b2d7a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "diogo-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a1ccbe08e6cb8f69"
              }
            ],
            "primary_network_interface_id": "eni-0a1ccbe08e6cb8f69",
            "private_dns": "ip-172-31-27-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.81",
            "public_dns": "ec2-18-212-102-187.compute-1.amazonaws.com",
            "public_ip": "18.212.102.187",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc1a63c4af83846d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_http_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e5e8b3ad0f851a7",
            "tags": {
              "Name": "HelloWorld-0"
            },
            "tags_all": {
              "Name": "HelloWorld-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fcf70065a39eb0ad"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-0decf20f135b2d7a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.diogo_key",
            "aws_security_group.allow_http_ssh",
            "data.aws_ami.al2023",
            "data.aws_vpc.default",
            "tls_private_key.ed25519"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051bfa33df3949860",
            "arn": "arn:aws:ec2:us-east-1:686699774218:instance/i-0d622deb1fd6bd291",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d622deb1fd6bd291",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "diogo-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08df5082e541811af"
              }
            ],
            "primary_network_interface_id": "eni-08df5082e541811af",
            "private_dns": "ip-172-31-16-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.100",
            "public_dns": "ec2-34-228-145-213.compute-1.amazonaws.com",
            "public_ip": "34.228.145.213",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-099549b00df1c56ec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_http_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e5e8b3ad0f851a7",
            "tags": {
              "Name": "HelloWorld-1"
            },
            "tags_all": {
              "Name": "HelloWorld-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fcf70065a39eb0ad"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-0d622deb1fd6bd291",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.diogo_key",
            "aws_security_group.allow_http_ssh",
            "data.aws_ami.al2023",
            "data.aws_vpc.default",
            "tls_private_key.ed25519"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051bfa33df3949860",
            "arn": "arn:aws:ec2:us-east-1:686699774218:instance/i-0a8c6b1863e8838e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8c6b1863e8838e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "diogo-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-068e3af1655b95c17"
              }
            ],
            "primary_network_interface_id": "eni-068e3af1655b95c17",
            "private_dns": "ip-172-31-21-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.215",
            "public_dns": "ec2-107-22-143-213.compute-1.amazonaws.com",
            "public_ip": "107.22.143.213",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a6c61ffab2df2b22",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_http_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e5e8b3ad0f851a7",
            "tags": {
              "Name": "HelloWorld-2"
            },
            "tags_all": {
              "Name": "HelloWorld-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fcf70065a39eb0ad"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-0a8c6b1863e8838e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.diogo_key",
            "aws_security_group.allow_http_ssh",
            "data.aws_ami.al2023",
            "data.aws_vpc.default",
            "tls_private_key.ed25519"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:security-group/sg-0fcf70065a39eb0ad",
            "description": "Allow HTTP \u0026 SSH inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0fcf70065a39eb0ad",
            "ingress": [],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "686699774218",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "tags_all": {
              "Name": "allow_http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c191489f702038c7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sg-0fcf70065a39eb0ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:security-group-rule/sgr-08513e78c917159aa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08513e78c917159aa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fcf70065a39eb0ad",
            "security_group_rule_id": "sgr-08513e78c917159aa",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sgr-08513e78c917159aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:security-group-rule/sgr-0415ea1075284ff81",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0415ea1075284ff81",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fcf70065a39eb0ad",
            "security_group_rule_id": "sgr-0415ea1075284ff81",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sgr-0415ea1075284ff81",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:security-group-rule/sgr-0bc9d4b7e2e84b840",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0bc9d4b7e2e84b840",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fcf70065a39eb0ad",
            "security_group_rule_id": "sgr-0bc9d4b7e2e84b840",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sgr-0bc9d4b7e2e84b840",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}